--- a/push_swap42/Makefile
+++ b/push_swap42/Makefile
@@ -17,32 +17,44 @@ RM = /bin/rm -f
 
 # Path
 LIBFT_DIR = LIBFT/
+LIBFT = ${LIBFT_DIR}/libft.a
+PRINTF_DIR = PRINTF/
+PRINTF = ${PRINTF_DIR}/libftprintf.a
+SRCS_DIR = SRCS/
+# LIBFT_DIR = LIBFT/
+# LIBFT = ${LIBFT_DIR}/libft.a
+# INC_DIR = inc/
+# OBJ_DIR = obj/
+# SRC_DIR = src/
 
 # Sources
 SRCS = ft_check.c ft_funciones_list.c ft_push_swap.c ft_utils_list.c ft_operaciones.c ft_sort_short.c ft_op_sort_b.c ft_sortlong.c ft_sortb.c ft_sort5hundred.c
-OBJS = $(SRCS:%.c=%.o)
+# OBJS = $(SRCS:%.c=%.o)
 LIB = push_swap.h
 
 # Comandos
-%.o: %.c
-	@$(CC) $(CFLAGS) -I./ -c $< -o $@
+# %.o: %.c
+# 	@$(CC) $(CFLAGS) -I./ -c $< -o $@
+$(OBJ_DIR)%.o: $(SRC_DIR)%.c
+		mkdir -p $(OBJ_DIR)
+		$(CC) -I $(INC_DIR)  -c $(CFLAGS) -MMD $< -o $@
 
-all: $(NAME)	
+all: $(NAME)
 
 libs:
 	make -C $(LIBFT_DIR)
 
 $(NAME): $(OBJS) $(LIB)
 	@$(CC) $(CFLAGS) $(OBJS) $(LIBFT_DIR)/libft.a -o $(NAME)
+
 clean:
-	@$(MAKE) clean -C $(LIBFT_DIR) 
-	@$(RM) $(OBJS)
+	$(RM) -r $(OBJ_DIR) $(DEPS)
+	$(RM) $(LIBFT_DIR)/libft.a
+	@make clean -C $(LIBFT_DIR)
 
 fclean: clean
-	@$(MAKE) fclean -C $
-	@$(MAKE) fclean -C $
-	@$(RM) $
-	
+	$(RM) $(NAME)	
+
 re: fclean all
 
 .PHONY: all clean fclean re
