makefile touch libft archivo

--- a/So_long/Makefile
+++ b/So_long/Makefile
@@ -17,8 +17,9 @@ CFLAGS = -Wall -Wextra -Werror -MMD
 RM = /bin/rm -rf
 
 # Path
-LIBFT_DIR = LIBFT/
+LIBFT_DIR = ./libft/
 LIBFT = ${LIBFT_DIR}libft.a
+LINK = -L$(LIBFT_DIR) -lft
 SRCS_DIR = srcs/
 BONUS_DIR = bonus/
 GET_DIR = srcs/get_next_line/
@@ -31,7 +32,6 @@ MLX = ${MLX_DIR}libmlx.a
 MINILIBXCC	= -I mlx -L $(MLX_DIR) -lmlx
 OPENGL = -framework OpenGL -framework AppKit
 
-#Objects & dependencies falten dependencies !!
 SRCS = $(SRCS_DIR)map_err.c $(SRCS_DIR)so_long.c $(SRCS_DIR)so_long_utils.c $(SRCS_DIR)create_map.c $(GET_DIR)get_next_line_utils.c $(GET_DIR)get_next_line.c  $(SRCS_DIR)valid_path.c $(SRCS_DIR)moves.c $(SRCS_DIR)printmap.c
 
 BONUS =$(BONUS_DIR)map_err_bns.c $(BONUS_DIR)so_long_bns.c $(BONUS_DIR)so_long_utils_bns.c $(BONUS_DIR)create_map_bns.c $(GET_DIR_BONUS)get_next_line_utils_bns.c $(GET_DIR_BONUS)get_next_line_bns.c  $(BONUS_DIR)valid_path_bns.c $(BONUS_DIR)moves_bns.c $(BONUS_DIR)printmap_bns.c $(BONUS_DIR)init_bns.c 
@@ -43,7 +43,7 @@ DEPS_BONUS = $(BONUS:%.c=%.d)
 
 # Gcc
 $(NAME): $(OBJ) $(LIB) $(MLX) $(LIBFT) $(LIB_GET) 
-	$(CC) $(CFLAGS) $(OBJ) $(MINILIBXCC) $(LIBFT) $(OPENGL) -o $(NAME)
+	$(CC) $(CFLAGS) -I$(LIBFT_DIR) $(LINK) $(OBJ) $(MINILIBXCC) $(OPENGL) -o $(NAME)
 
 bonus: $(BONUS_OBJ) $(LIB) $(MLX) $(LIBFT) $(LIB_GET) 
 	$(CC) $(CFLAGS) $(BONUS_OBJ) $(MINILIBXCC) $(LIBFT) $(OPENGL) -o $(BONUS_NAME)
