--- a/So_long/Makefile
+++ b/So_long/Makefile
@@ -46,7 +46,7 @@ $(NAME): $(OBJ) $(LIB) $(MLX) $(LIBFT) $(LIB_GET)
 	$(CC) $(CFLAGS) -I$(LIBFT_DIR) $(LINK) $(OBJ) $(MINILIBXCC) $(OPENGL) -o $(NAME)
 
 bonus: $(BONUS_OBJ) $(LIB) $(MLX) $(LIBFT) $(LIB_GET) 
-	$(CC) $(CFLAGS) $(BONUS_OBJ) $(MINILIBXCC) $(LIBFT) $(OPENGL) -o $(BONUS_NAME)
+	$(CC) $(CFLAGS) -I$(LIBFT_DIR) $(BONUS_OBJ) $(MINILIBXCC) $(LINK) $(OPENGL) -o $(BONUS_NAME)
 
 $(LIBFT): 
 		@make -sC $(LIBFT_DIR)
